--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node bot.js"
   },
   "dependencies": {
-    "discord.io": "^2.5.3",
+    "discord.io": "github:woor/discord.io#gateway_v6",
     "winston": "^2.4.2"
   }
 }
