--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "discord.io": "github:woor/discord.io#gateway_v6",
+    "natural": "^0.5.6",
     "winston": "^2.4.2"
   }
 }
