--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "node bot.js"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
     "discord.io": "github:woor/discord.io#gateway_v6",
+    "fs": "0.0.1-security",
     "natural": "^0.5.6",
+    "readline": "^1.3.0",
     "winston": "^2.4.2"
   }
 }
