--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bluebird": "^3.5.1",
     "discord.io": "github:woor/discord.io#gateway_v6",
     "fs": "0.0.1-security",
+    "mathjs": "^5.0.3",
     "natural": "^0.5.6",
     "readline": "^1.3.0",
     "winston": "^2.4.2"
